name:               dslr-www
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable dslr-www
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators,
                      TemplateHaskell
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      servant,
                      servant-server,
                      stm,
                      text,
                      transformers,
                      warp,
                      mtl,
                      persistent,
                      persistent-postgresql,
                      persistent-template,
                      heroku,
                      resourcet,
                      monad-logger
  hs-source-dirs:     src